--- a/index.html
+++ b/index.html
@@ -3,11 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAGINA WEB LAURA</title>
+    <title> WEB FOTOGRAFIA</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    <script src="https://kit.fontawesome.com/05df3f2ee1.js" crossorigin="anonymous"></script></head>
 <body>
-
-    
+    <header class="header">
+        <a href="#" class="logo">LG</a>
+        <input class="side-menu" type="checkbox" id="side-menu"/>
+        <label class="hamb" for="side-menu">
+            <span class="hamb-line"></span>
+        </label>
+        <nav class="nav">
+            <ul class="menu">
+                <li><a href="./index.html">INICIO</a></li>
+                <li><a href="./biografia.html">BIOGRAFÍA</a></li>
+                <li><a href="./portfolio.html">PORTFOLIO</a></li>
+                <li><a href="./contacto.html">CONTACTO</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main-container">
+        <section class="imginicio-container">
+            <img class="imginicio" src="assets/img/imginicio.jpg" alt="imagen en blanco y negro">
+            <p class="title-container">
+                <span>FOTOGRAFÍA</span>
+                <span><i>Por</i></span>
+                <span style="font-style: italic;">Laura García</span>
+            </p>
+        </section>
+        <section class="servicio-container">
+            <h2>SERVICIOS</h2>
+            <div class="icon-container">
+                <article class="article-container">
+                    <i class="fa-solid fa-camera iconos"></i>
+                    <p class="text-container">
+                       <span class="text-title">BLANCO Y NEGRO</span>
+                       <span class="text-subtitle">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit
+                        </span>
+                    </p>
+                </article>
+                <article class="article-container">
+                    <i class="fa-solid fa-camera iconos"></i>
+                    <p class="text-container">
+                        <span class="text-title">COLOR</span>
+                        <span class="text-subtitle">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit
+                        </span>
+                    </p>
+                </article>
+                <article class="article-container">
+                    <i class="fa-solid fa-video iconos"></i>
+                    <p class="text-container">
+                        <span class="text-title">VIDEO</span>
+                        <span class="text-subtitle">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit
+                        </span>
+                    </p>
+                </article>
+                <article class="article-container">
+                    <i class="fa-solid fa-wand-magic-sparkles iconos"></i>
+                    <p class="text-container">
+                        <span class="text-title">EDICIÓN</span>
+                        <span class="text-subtitle">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit
+                        </span>
+                    </p>
+                </article>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
