cambios a biografia para que sea responsive

--- a/biografia.html
+++ b/biografia.html
@@ -24,7 +24,6 @@
     </header>
     <main>
         <section>
-            <h2 class="h2-bio-title">BIOGRAFÍA</h2>
             <article class="bio-container">
                 <h4 class="bio-h4">SOBRE NOSOTROS</h4>
                 <h3 class="bio-h3">Somos una empresa de fotografía y estudio digital</h3>
@@ -40,13 +39,9 @@
                 <p class="black">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsum esse, libero provident sapiente consequatur porro eius ipsa, numquam quaerat cumque! Sit voluptas provident praesentium, voluptatibus adipisci ipsum id? Expedita?
                 </p>
+                <img class="img-bio" src="./assets/img/imgbiografia.jpg" alt="nuestro equipo en blanco y negro">
             </article>
         </section>
-        
-        
-
-
-
     </main>
 </body>
 </html>
