cambioa en portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,81 @@
             </ul>
         </nav>
     </header>
-
-    
+    <main>
+        <div class="grid-gallery">
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img1.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img6.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img2.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img13.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img3.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img17.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img4.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img9.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img5.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img10.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img11.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img7.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img12.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img14.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img15.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img16.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img18.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <img class="grid-gallery__image" src="./assets/img/img8.jpg">
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <video class="grid-gallery__image" autoplay muted loop> 
+                    <source src="./assets/video/video2.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <video class="grid-gallery__image" autoplay muted loop> 
+                    <source src="./assets/video/video1.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </a>
+            <a class="grid-gallery__item" href="#">
+                <video class="grid-gallery__image" autoplay muted loop> 
+                    <source src="./assets/video/video3.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </a>
+        </div>
+    </main>
 </body>
 </html>
